uploading images to cloudinary

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ PORT=port_number_int
 JWT_SECRET=string   
 SEND_GRID_API_KEY=string
 VERIFY_HOST=string
+CLOUDINARY_NAME=string
+CLOUDINARY_API_KEY=string
+CLOUDINARY_API_SECRET=string
