--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^14.0.0",
@@ -27,6 +28,7 @@
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^3.3.4",
     "nodemon": "^3.0.1",
     "swagger-ui-express": "^5.0.0"
